# xx-novel-generator

./: .gitignore  Sprint-4-验收报告.md  Sprint-5-启动计划.md  Sprint-6-首页重设计完成报告.md  世界观生成数据结构修复实施指南.md  世界观生成数据结构修复紧急补丁方案.md  世界观生成数据结构问题技术分析报告.md  角色模板管理功能实现总结.md
.kilocode/: mcp.json  (+1 more)
backend/: .coverage  .env  .env.example  README.md  ai_config_fix_summary.md  ai_response_parser_analysis.md  ai_writer.db  alembic.ini  init_brain_storm.py  pyproject.toml  requirements.txt  test_ai_configs_fix.py  test_ai_response_parser.py  test_api_simple.py  test_brain_storm_api.py  test_homepage_apis.py  test_improved_json_cleanup.py  test_worldview_conversion.py  test_worldview_generation_with_novel_settings.py  verify_brain_storm_imports.py  worldview.txt  代理配置支持实现总结.md  脑洞生成器使用指南.md  脑洞生成器后端接口实现报告.md
backend/app/: __init__.py  main.py
backend/app/api/v1/: __init__.py  admin_character_templates.py  ai_configs.py  api.py  auth.py  chapters.py  character_template_interactions.py  character_templates.py  characters.py  demo.py  generation.py  novels.py  outline.py  workspace.py  worldview.py
backend/app/core/: __init__.py  config.py  database.py  dependencies.py  security.py
backend/app/models/: __init__.py  ai_model_config.py  base.py  brain_storm.py  chapter.py  character.py  character_template.py  novel.py  outline.py  prompt.py  user.py  worldview.py
backend/app/schemas/: __init__.py  ai_model_config.py  ai_worldview.py  brain_storm.py  chapter.py  character.py  character_template.py  novel.py  outline.py  prompt.py  user.py  worldview.py
backend/app/services/: ai_service.py  brain_storm_service.py  generation_service.py  http_adapter.py  prompt_service.py  worldview_converter.py
backend/scripts/: add_proxy_fields.py  create_character_template_tables.py  fix_characters_table.py  force_create_tables.py  init_chapter_prompts.py  init_character_outline_prompts.py  init_prompts.py  init_worldview_prompt.py  simple_init.py  test_character_templates_api.py  update_worldview_prompt_with_novel_settings.py  update_worldview_tables.py
(+154 files in other folders)
